Change CSS class used to denote a visible crumb to avoid conflicts with Bootstrap

--- a/src/less/jquery.rcrumbs.less
+++ b/src/less/jquery.rcrumbs.less
@@ -25,7 +25,7 @@ body, html {
       //This happen because jquery animation set overflow:hidden when animating an element.
       overflow: hidden;
       display: none;
-      &.show {
+      &.show-crumb {
         display: inline-block;
       }
       &.ellipsis {
@@ -48,5 +48,3 @@ body, html {
     padding: 0 5px;
   }
 }
-
-
